--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -2,7 +2,8 @@ NAME := ./contact
 CC := g++
 CFLAGS := -Wall -Wextra -Werror
 
-SRCS := Contact.cpp
+SRCS := Contact.cpp PhoneBook.cpp main.cpp
+HEADERS := Contact.hpp PhoneBook.hpp
 
 OBJS := $(SRCS:.cpp=.o)
 
@@ -11,7 +12,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
 
-%.o: %.cpp
+%.o: %.cpp $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
