compile with -std=c++98" git pus

--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME := megaphone
 CC := c++
-CFLAGS := -Wall -Wextra -Werror
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := megaphone.cpp
 
