compile with c98 & avoid relink

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME := ./zombie
 CC := c++
-CFLAGS := -Wall -Wextra -Werror
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := Zombie.cpp newZombie.cpp randomChump.cpp main.cpp
 HEADERS := Zombie.hpp
@@ -22,3 +22,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY: $(OBJS)
