--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME := ./zombieHorde
 CC := c++
-CFLAGS := -Wall -Wextra -Werror
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := Zombie.cpp ZombieHorde.cpp main.cpp
 HEADERS := Zombie.hpp
@@ -22,3 +22,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY: $(OBJS)
