--- a/cpp01/ex06/Makefile
+++ b/cpp01/ex06/Makefile
@@ -1,6 +1,6 @@
 NAME := ./harlFilter
 CC := c++
-CFLAGS := -Wall -Wextra -Werror
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := main.cpp Harl.cpp
 
@@ -23,3 +23,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY: $(OBJS)
