--- a/cpp02/ex01/Makefile
+++ b/cpp02/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME := ./main
-CC := c++
-CFLAGS := -Wall -Wextra -Werror
+CXX := c++
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := Fixed.cpp main.cpp 
 HEADERS := Fixed.hpp
@@ -10,10 +10,10 @@ OBJS := $(SRCS:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
+	$(CXX) $(CFLAGS) -o $(NAME) $(OBJS)
 
 %.o: %.cpp $(HEADERS)
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CXX) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
@@ -22,3 +22,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY: $(OBJS)
