--- a/cpp03/ex03/Makefile
+++ b/cpp03/ex03/Makefile
@@ -1,6 +1,6 @@
 NAME := ./main
 CC := c++
-CFLAGS := -Wall -Wextra -Werror -std=c++98 -pedantic -Wshadow -Wno-shadow
+CFLAGS := -Wall -Wextra -Werror -std=c++98 -Wshadow -Wno-shadow
 
 SRCS := ClapTrap.cpp main.cpp FragTrap.cpp DiamondTrap.cpp ScavTrap.cpp
 HEADERS := ClapTrap.hpp FragTrap.hpp DiamondTrap.hpp ScavTrap.hpp
@@ -22,3 +22,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY : $(OBJS)
