compare instances + Makefile flags

--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME := ./main
 CC := c++
-CFLAGS := -Wall -Wextra -Werror -std=c++98 -pedantic
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := ClapTrap.cpp main.cpp FragTrap.cpp 
 HEADERS := ClapTrap.hpp FragTrap.hpp
