--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME := ./main
 CC := c++
-CFLAGS := -Wall -Wextra -Werror -std=c++98 -pedantic
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := ClapTrap.cpp main.cpp
 HEADERS := ClapTrap.hpp
@@ -22,3 +22,5 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+.SECONDARY: $(OBJS)
