--- a/cpp08/ex01/Makefile
+++ b/cpp08/ex01/Makefile
@@ -1,7 +1,6 @@
 NAME := ./main
 CC := c++
-# CFLAGS := -Wall -Wextra -Werror -std=c++98
-CFLAGS := -Wall -Wextra -Werror
+CFLAGS := -Wall -Wextra -Werror -std=c++98
 
 SRCS := main.cpp Span.cpp
 HEADERS := Span.hpp
